# solcore

./: CMakeLists.txt  Event.c  Function.c  List.c  Number.c  Object.c  String.c  descriptor.yml  solcore.sol  solcore.solbin
